Fix backlog email contrast in dark mode

--- a/registrations/assets/css/_unmnemonic-devices-settings.scss
+++ b/registrations/assets/css/_unmnemonic-devices-settings.scss
@@ -67,7 +67,7 @@ $global-flexbox: false;
 
 $header-font-family: 'ud-body';
 $body-font-family: 'ud-body';
-$body-font-color: white;
+$body-font-color: #fffff0;
 
 // $primary-color: #DDC49C;
 
@@ -75,8 +75,8 @@ $topbar-background: #A18D72;
 
 $global-width: rem-calc(400) !default;
 
-$form-label-color: white;
-$helptext-color: white;
+$form-label-color: #fffff0;
+$helptext-color: #fffff0;
 $helptext-font-style: normal;
 
 
